--- a/Amazon_Cloud_Player_tweak.user.css
+++ b/Amazon_Cloud_Player_tweak.user.css
@@ -1,10 +1,10 @@
 /* Amazon Cloud Player tweak */
 @namespace url(http://www.w3.org/1999/xhtml);
-@-moz-document url-prefix("https://www.amazon.co.jp/gp/dmusic/mp3/player") {
-.shareSong, .shareAlbum,
-.rec-buyButton-wrapper, .rec-footer,
-.nowPlayingOptionPanel { display: none !important; }
+@-moz-document url-prefix("https://www.amazon.co.jp/gp/dmusic/cloudplayer/player") {
+.rec-footer, .rec-description .button,
+.actionButtons a[href*="#remove"],
+.signout { display: none !important; }
 
-#nowPlayingSection .timer { font: bold 300% "Myriad Pro",sans-serif !important; top: -24px !important; }
+#nowPlayingSection .timer { font: bold 280% "Myriad Pro",sans-serif !important; top: -0.75em !important; }
 #currentTime              { font-weight: normal !important; }
 }
