--- a/The_Old_Reader_tweak.user.css
+++ b/The_Old_Reader_tweak.user.css
@@ -4,6 +4,9 @@
 /* Sidebar */
 #sidebar .nav-header { margin-top: 0.2em !important; border-top: 1px dashed #ccc !important; }
 
+.sidebar-nav > .nav.nav-list > li:first-child,
+.sidebar-nav > .nav.nav-list > .social:not(:nth-of-type(4)) { display: none !important; }
+
 /* Feed header */
 .page-header .clr { float: right !important; clear: none !important; }
 
