--- a/XUL_Hide_context_menu_elements.user.css
+++ b/XUL_Hide_context_menu_elements.user.css
@@ -1,26 +1,26 @@
 /* [XUL] Hide context menu elements */
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
-/* Page Menu
+/* Page menu
 
  * [リンクを新しいウィンドウで開く][リンクを新しいプライベートウィンドウで開く][セパレータ]
- * [戻る][進む][更新][中止][セパレータ]
- * [...をブックマーク]
+ * [戻る][進む][更新][中止][ブックマーク][セパレータ]（アイコン）
+ * [このリンクをブックマーク]
  * [...をメールで送信]
  * [セパレータ]...
- * [名前をつけてページを保存]
+ * [名前をつけてページを保存][画像だけを表示]
  * [選択したURLを開く][選択した部分のソースを表示]
  * [デスクトップの背景に設定][コントロールを隠す][この検索にキーワードを設定]
  */
 #context-openlink, #context-openlinkprivate, #context-sep-open,
-#context-back, #context-forward, #context-reload, #context-stop, #context-sep-stop,
-#context-bookmarkpage, #context-bookmarklink,
+#context-navigation, #context-sep-navigation,
+#context-bookmarklink,
 #context-sendpage, #context-sendlink, #context-sendimage, #context-sendvideo, #context-sendaudio,
-#context-sep-viewbgimage,  #context-sep-properties,
-#context-savepage,
+#context-sep-viewbgimage, #context-sep-properties,
+#context-savepage, #context-viewimage,
 #context-openlinkincurrent, #context-viewpartialsource-selection,
 #context-setDesktopBackground, #context-media-hidecontrols, #context-keywordfield,
 
-/* Textarea sidemenu
+/* Textarea menu
 
  * [切り取り][削除][すべて選択][セパレータ]
  * [すべて選択][セパレータ]
@@ -29,7 +29,7 @@
 #context-selectall, #context-sep-selectall,
 #spell-check-enabled, #spell-separator,
 
-/* Frame sidemenu
+/* Frame menu
 
  * [フレームを新しいウィンドウで開く][このフレームをブックマーク]
  * [名前を付けてフレームを保存][セパレータ]
@@ -40,16 +40,12 @@
 
 /* Tab menu
 
- * [タブを再読み込み][セパレータ]
- * [タブをピン留め]
- * [新しいウィンドウへ移動][セパレータ]
- * [すべてのタブを再読み込み][すべてのタブをブックマーク]
- * [閉じたタブを元に戻す] */
-#context_reloadTab, #tabContextMenu menuseparator:first-of-type,
-#context_pinTab,
-#context_openTabInWindow, #context_openTabInWindow + menuseparator,
-#context_reloadAllTabs, #context_bookmarkAllTabs,
-#context_undoCloseTab,
+ * [タブを再読み込み][タブをピン留め][新しいウィンドウへ移動]
+ * [すべてのタブを再読み込み][すべてのタブをブックマーク][閉じたタブを元に戻す]
+ * [セパレータ] */
+#context_reloadTab, #context_pinTab, #context_openTabInWindow,
+#context_reloadAllTabs, #context_bookmarkAllTabs, #context_undoCloseTab,
+#tabContextMenu menuseparator:not(:nth-of-type(3)),
 
 /* URL bar menu
 
