--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -18,14 +18,9 @@ text-decoration: none !important;
 #soldByThirdParty b:before    /* New */
 { content: "\A"; white-space: pre !important; }
 
-#soldByThirdParty + .a-button-stack { opacity: 0.3 !important; }
-
-[id*="A9Ads"] * {
-font: 8pt/0.9 sans-serif !important;
-padding: 0 !important;
-margin: 0 !important;
-opacity: 0.9 !important;
-}
+/* お客様は〇〇にこの商品を注文しました (New) */
+.a-alert-info      { border-color: #fa0 !important; width: 720px !important; }
+.a-alert-container { background-color: #feb !important; }
 
 #buyboxusedDivId,        /* 中古品を購入 */
 #prime_buybox_lower_div, /* お急ぎ便無料でショッピングカートに入れる */
@@ -52,7 +47,16 @@ font: bold 180% sans-serif !important; /* 120% * 180% = 216% */
 }
 .itemPriceDrop .a-text-bold:after { content: "\A"; white-space: pre !important; }
 
+
 /* Flash Ads */
 [id^="nav_sitewide_msg_"] object
 { display: none !important; }
+
+/* A9 Ads */
+[id*="A9Ads"] * {
+font: 8pt/0.9 sans-serif !important;
+padding: 0 !important;
+margin: 0 !important;
+opacity: 0.9 !important;
+}
 }
