--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -11,8 +11,7 @@
 #soldByThirdParty b
 {
 color: #d00 !important;
-font: bold 250% sans-serif !important;
-text-decoration: none !important;
+font: bold 240% sans-serif !important;
 }
 #BBAvailPlusMerchID b:before, /* Old */
 #soldByThirdParty b:before    /* New */
@@ -22,12 +21,15 @@ text-decoration: none !important;
 .a-alert-info      { border-color: #fa0 !important; width: 720px !important; }
 .a-alert-container { background-color: #feb !important; }
 
+/* 〇〇日にお届けするには今から〇〇時間以内にお急ぎ便 */
+#ddmShippingMessage { padding: 0.7em 1.2em 1em !important; background: #efe !important; }
+#ddmShippingMessage b, #ddmFastestCountdown { font: bold 170% sans-serif !important; }
+
 #buyboxusedDivId,        /* 中古品を購入 */
 #prime_buybox_lower_div, /* お急ぎ便無料でショッピングカートに入れる */
 #ftMessage,              /* ○○日にお届けします */
 #primenote_feature_div,  /* 別の出品者から価格が低い商品が出品されています */
 .itemUsedAndNew,         /* ○○点の新品/中古品 ○○円より @wishlist */
-#ddmMessage, #dynamicDeliveryMessage_feature_div, /* 住所からお届け予定日を確認 (Old, New) */
 .mbcBox, #moreBuyingChoices_feature_div,          /* こちらからもご購入いただけます (Old, New)  */
 #tafContainerDiv, #tellAFriendBox_feature_div,    /* シェアする (Old, New) */
 #tellAFriendBylineBox_feature_div, #tell-a-friend,/* シェアする (New) */
@@ -41,16 +43,12 @@ opacity: 0.3 !important;
 
 /* 値下がりしました ○○% @wishlist */
 .itemPriceDrop { font: bold 120% sans-serif !important; }
-.itemPriceDrop .a-text-bold {
-color: #d00 !important;
-font: bold 180% sans-serif !important; /* 120% * 180% = 216% */
-}
+.itemPriceDrop .a-text-bold { color: #d00 !important; font: bold 180% sans-serif !important; }
 .itemPriceDrop .a-text-bold:after { content: "\A"; white-space: pre !important; }
 
 
 /* Flash Ads */
-[id^="nav_sitewide_msg_"] object
-{ display: none !important; }
+[id^="nav_sitewide_msg_"] object { display: none !important; }
 
 /* A9 Ads */
 [id*="A9Ads"] * {
