Use visibility instead of display

--- a/XUL_Hide_context_menu_elements.user.css
+++ b/XUL_Hide_context_menu_elements.user.css
@@ -79,5 +79,5 @@
 #placesContext_sortBy\:name,
 #placesContext_newSeparator, #placesContext_editSeparator, #placesContext_deleteSeparator,
 #placesContext_sortSeparator
-{ display: none !important; }
+{ visibility: collapse !important; }
 
