--- a/XUL_Navigation_bar_tweak.user.css
+++ b/XUL_Navigation_bar_tweak.user.css
@@ -3,7 +3,7 @@
 #urlbar dropmarker, #urlbar-go-button, #urlbar-reload-button, #urlbar-stop-button,
 .search-go-button,
 #new-tab-button, .tabs-newtab-button, #alltabs-button 
-{ display: none !important; }
+{ visibility: collapse !important; }
 
 #nav-bar .toolbarbutton-1 {
 margin-top: -5px !important;
