Change color of urlbar

--- a/XUL_Change_the_location_bar_color_for_secure_sites.user.css
+++ b/XUL_Change_the_location_bar_color_for_secure_sites.user.css
@@ -1,4 +1,4 @@
 /* [XUL] Change the location bar color for secure sites */
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
-#urlbar[level="high"][pageproxystate="valid"] > .autocomplete-textbox-container { background-color: #ffc !important; }
-#urlbar[level="broken"] > .autocomplete-textbox-container { background-color: #fdd !important; }
+#urlbar[level="high"][pageproxystate="valid"] > .autocomplete-textbox-container { background-color: #ffb !important; }
+#urlbar[level="broken"] > .autocomplete-textbox-container { background-color: #fcc !important; }
