--- a/XUL_Hide_context_menu_elements.user.css
+++ b/XUL_Hide_context_menu_elements.user.css
@@ -7,24 +7,23 @@
  * [このリンクをブックマーク]
  * [...をメールで送信]
  * [セパレータ]...
- * [名前をつけてページを保存][画像だけを表示][動画だけを表示]
- * [名前をつけて画像を保存][名前をつけて動画を保存][名前をつけてオーディオを保存][スナップショットを保存]
+ * [名前をつけてページを保存][名前をつけて画像を保存][名前をつけて動画を保存][名前をつけてオーディオを保存][スナップショットを保存]
  * [選択したURLを開く][選択した部分のソースを表示]
  * [デスクトップの背景に設定][コントロールを隠す][この検索にキーワードを設定]
- */
+ * [背景画像を表示]（無効化されているとき） */
 #context-openlink, #context-openlinkprivate, #context-sep-open,
 #context-navigation, #context-sep-navigation,
 #context-bookmarklink,
 #context-sendpage, #context-sendlink, #context-sendimage, #context-sendvideo, #context-sendaudio,
-#context-sep-viewbgimage, #context-sep-properties, #context-sep-copyimage,
-#context-savepage, #context-viewimage, #context-viewvideo,
-#context-saveimage, #context-savevideo, #context-saveaudio, #context-video-saveimage,
+#context-sep-viewbgimage, #context-sep-viewsource, #context-sep-properties, #context-sep-copyimage,
+#context-savepage, #context-saveimage, #context-savevideo, #context-saveaudio, #context-video-saveimage,
 #context-openlinkincurrent, #context-viewpartialsource-selection,
 #context-setDesktopBackground, #context-media-hidecontrols, #context-keywordfield,
+#context-viewbgimage[disabled],
 
 /* Textarea menu
 
- * [切り取り][削除][すべて選択][セパレータ]
+ * [切り取り][削除][セパレータ]
  * [すべて選択][セパレータ]
  * [スペルチェックを行う][セパレータ] */
 #context-cut, #context-delete, #context-sep-paste,
