Maximize the clickable area

--- a/Highlight_interlanguage_links_for_Wikipedia.user.css
+++ b/Highlight_interlanguage_links_for_Wikipedia.user.css
@@ -1,8 +1,9 @@
 /* Highlight interlanguage links for Wikipedia */
 @namespace url(http://www.w3.org/1999/xhtml);
 @-moz-document domain("wikipedia.org") {
-#p-lang li.interwiki-en,
-#p-lang li.interwiki-ja {
+#p-lang li.interwiki-en a,
+#p-lang li.interwiki-ja a {
+color: #fff !important;
 font: 18px/1.8 "Arial", sans-serif !important;
 text-align: center !important;
 padding: 0 !important;
@@ -14,7 +15,6 @@ display: block !important;
 width: 350px !important;
 }
 
-#p-lang li.interwiki-en a, #p-lang li.interwiki-ja a { color: #fff !important; }
 #p-lang li.interwiki-en a:before, #p-lang li.interwiki-ja a:before { content: "\00BB\00A0 Show "; }
 #p-lang li.interwiki-en a:after, #p-lang li.interwiki-ja a:after { content: " revision"; }
 }
