--- a/Highlight_interlanguage_links_for_Wikipedia.user.css
+++ b/Highlight_interlanguage_links_for_Wikipedia.user.css
@@ -4,17 +4,19 @@
 #p-lang li.interwiki-en a,
 #p-lang li.interwiki-ja a {
 color: #fff !important;
-font: 18px/1.8 "Arial", sans-serif !important;
+font: 1.4rem/1.8 sans-serif !important;
 text-align: center !important;
+text-decoration: none !important;
 padding: 0 !important;
 background: #f90 !important;
-position: absolute !important;
-top: -9em !important;
-left: 10em !important;
+position: fixed !important;
+top: 0 !important;
+left: 11rem !important;
 display: block !important;
-width: 350px !important;
+width: 14em !important;
+border-radius: 0 0 0.4em 0.4em !important;
 }
 
-#p-lang li.interwiki-en a:before, #p-lang li.interwiki-ja a:before { content: "\00BB\00A0 Show "; }
-#p-lang li.interwiki-en a:after, #p-lang li.interwiki-ja a:after { content: " revision"; }
+#p-lang li.interwiki-en a:before, #p-lang li.interwiki-ja a:before { content: "\BB\A0 "; }
+#p-lang li.interwiki-en a:hover,  #p-lang li.interwiki-ja a:hover  { background: #fc0 !important; }
 }
