--- a/Highlight_interlanguage_links_for_Wikipedia.user.css
+++ b/Highlight_interlanguage_links_for_Wikipedia.user.css
@@ -8,7 +8,7 @@
     text-align: center !important;
     text-decoration: none !important;
     padding: 0.4em !important;
-    background: #f90 !important;
+    background: #fa0 !important;
     position: fixed !important;
     top: 0 !important;
     left: 11rem !important;
@@ -18,5 +18,5 @@
   }
 
   #p-lang li.interwiki-en a:before, #p-lang li.interwiki-ja a:before { content: "\BB\A0 "; }
-  #p-lang li.interwiki-en a:hover,  #p-lang li.interwiki-ja a:hover  { background: #fc0 !important; }
+  #p-lang li.interwiki-en a:hover,  #p-lang li.interwiki-ja a:hover  { background: #f70 !important; }
 }
