--- a/2ch.net_tweak.user.css
+++ b/2ch.net_tweak.user.css
@@ -3,9 +3,9 @@
 @-moz-document domain("2ch.net"), domain("bbspink.com"), domain("2ch.sc") {
 form, hr, iframe { display: none !important; }
 
-h1 { font: bold large/1.8 "Migmix 2P", sans-serif !important; clear: both !important; }
+h1 { font: bold x-large/1.8 sans-serif !important; clear: both !important; }
 
 dt a[href^="mailto:"]:after { content: " [" attr(href) "]"; }
 dt a { color: #080 !important; text-decoration: none !important; }
-dd { line-height: 1.5 !important; }
+dd { line-height: 1.7 !important; }
 }
