--- a/Wikipedia_tweak.user.css
+++ b/Wikipedia_tweak.user.css
@@ -1,4 +1,4 @@
-/* Highlight interlanguage links for Wikipedia */
+/* Wikipedia tweak */
 @namespace url(http://www.w3.org/1999/xhtml);
 @-moz-document domain("wikipedia.org") {
   #p-lang li.interwiki-en a,
