Obscure the link of ChillingEffects.org

--- a/Google_web_search_tweak.user.css
+++ b/Google_web_search_tweak.user.css
@@ -6,4 +6,6 @@
 
   .mw #rhs { margin-left: 62em !important; }
   .mw #nyc { margin-left: 55em !important; }
+
+  .mw .mfr { font: x-small/1.4 sans-serif !important; }
 }
