Follow minor change

--- a/Amazon_Cloud_Player_tweak.user.css
+++ b/Amazon_Cloud_Player_tweak.user.css
@@ -1,7 +1,7 @@
 /* Amazon Cloud Player tweak */
 @namespace url(http://www.w3.org/1999/xhtml);
 @-moz-document url-prefix("https://www.amazon.co.jp/gp/dmusic/cloudplayer/player") {
-.rec-footer, .rec-description .button, .bucket .title,
+.recFooter, .bucket .title,
 .currentSongActions, .optionCell > a, .actionButtons > a[href*="#remove"],
 .gridOptions, .albumSongCount,
 #accountOptions .setting
