--- a/Amazon_Cloud_Player_tweak.user.css
+++ b/Amazon_Cloud_Player_tweak.user.css
@@ -7,6 +7,6 @@
 #accountOptions .setting
 { display: none !important; }
 
-#nowPlayingSection .timer { font: bold 280% "Myriad Pro",sans-serif !important; top: -0.8em !important; }
-#currentTime              { font-weight: normal !important; }
+#nowPlayingSection .timer { font-size: 2.2rem !important; top: -2.8rem !important; }
+#currentDuration          { font-size: 2.8rem !important; font-weight: bold !important; }
 }
