--- a/Amazon_Cloud_Player_tweak.user.css
+++ b/Amazon_Cloud_Player_tweak.user.css
@@ -6,6 +6,9 @@
 #accountOptions .setting
 { display: none !important; }
 
+.countText { display: none !important; }
+.countNumber::after { content: " song(s)" }
+
 #nowPlayingSection .timer { font-size: 2.2rem !important; top: -2.8rem !important; }
 #currentDuration          { font-size: 2.8rem !important; font-weight: bold !important; }
 }
