--- a/Google_web_search_tweak.user.css
+++ b/Google_web_search_tweak.user.css
@@ -8,4 +8,7 @@
   .mw #nyc { margin-left: 55em !important; }
 
   .mw .mfr { font: x-small/1.4 sans-serif !important; }
+
+  .mw ._Tib   { font: bold large/2 sans-serif !important; }
+  .mw ._Tib s { text-decoration: none !important; }
 }
