Dismiss all toolbar menu

--- a/XUL_Hide_context_menu_elements.user.css
+++ b/XUL_Hide_context_menu_elements.user.css
@@ -77,6 +77,10 @@
 #placesContext_cut, #placesContext_copy, #placesContext_paste,
 #placesContext_sortBy\:name,
 #placesContext_openSeparator, #placesContext_newSeparator, #placesContext_deleteSeparator,
-#placesContext_sortSeparator
+#placesContext_sortSeparator,
+
+/* Toolbar menu (Dismiss all)
+*/
+#toolbar-context-menu
 { visibility: collapse !important; }
 
