Follow Excite translation site renewal

--- a/Excite_translation_tweak.user.css
+++ b/Excite_translation_tweak.user.css
@@ -1,24 +1,11 @@
 /* Excite translation tweak */
 @namespace url(http://www.w3.org/1999/xhtml);
 @-moz-document url-prefix("http://www.excite.co.jp/world/") {
-#contents > :not(#transForm):not(#webPageMin):not(.content),
-#sidebar, #exUnderNav, #exFooter, #toEXTOP,
-#tools, #spaceArrow, #beforeBox, #webPageMinSub,
-.ad728, #excite_slidead_wrap
+#contents > :not(#transForm):not(#webPageMin):not(#techDict),
+#sidebar, #exUnderNav, #exFooter, #afterBox, #excite_slidead_wrap,
+.ad728
 { display: none !important; }
 
-
 #contents { margin: 0 !important; }
-#transForm, #auto_detect_box { width: auto !important; }
-
-#leftBox, #rightBox, .inputForm { width: 580px !important; }
-#transForm textarea { width: 550px !important; border: 2px solid #ccc !important; }
-#transferSubmitBtn, #retranceCheck, #inputClear { left: 600px !important; }
-
-.resizable-textarea > span, .inputForm, #transForm .hgroup { background: none !important; }
-
-.hgroup h3 { font-size: 20px !important; }
 }
-
-
 
