--- a/Excite_translation_tweak.user.css
+++ b/Excite_translation_tweak.user.css
@@ -1,7 +1,7 @@
 /* Excite translation tweak */
 @namespace url(http://www.w3.org/1999/xhtml);
 @-moz-document url-prefix("http://www.excite.co.jp/world/") {
-  #contents > :not(#transForm):not(#webPageMin):not(#techDict),
+  #contents > :not(#transForm):not(#webPageMin):not(#techDict):not(.content),
   #sidebar, #exUnderNav, #exFooter, #afterBox, #excite_slidead_wrap,
   .ad728
   { display: none !important; }
