--- a/Google_web_search_tweak.user.css
+++ b/Google_web_search_tweak.user.css
@@ -10,6 +10,8 @@
   .mw .mfr   { font: x-small/1.4 sans-serif !important; opacity: 0.6 !important; }
   .mw .mfr i { font-style: normal !important; }
 
+  .mw .slp a.fl { color: #e00 !important; font-weight: bold !important; background: #fee !important; }
+
   .mw ._Tib   { font: bold large/2 sans-serif !important; }
   .mw ._Tib s { text-decoration: none !important; }
 }
