--- a/Google_web_search_tweak.user.css
+++ b/Google_web_search_tweak.user.css
@@ -7,11 +7,15 @@
   .mw #rhs { margin-left: 62em !important; }
   .mw #nyc { margin-left: 55em !important; }
 
+
+  /* ChillingEffects */
   .mw .mfr   { font: x-small/1.4 sans-serif !important; opacity: 0.6 !important; }
   .mw .mfr i { font-style: normal !important; }
 
+  /* Hacked */
   .mw .slp a.fl { color: #e00 !important; font-weight: bold !important; background: #fee !important; }
 
+  /* Missing words and/or Recently visited page*/
   .mw ._Tib   { font: bold large/2 sans-serif !important; }
   .mw ._Tib s { text-decoration: none !important; }
 }
