Restrict to work only on the toolbar

--- a/XUL_Kill_useless_margins_on_Stylish_toolbar_button.user.css
+++ b/XUL_Kill_useless_margins_on_Stylish_toolbar_button.user.css
@@ -1,3 +1,3 @@
 /* [XUL] Kill useless margins on Stylish toolbar button */
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
-#stylish-toolbar-button { padding: 0 !important; }
+#stylish-toolbar-button[cui-areatype="toolbar"] { padding: 0 !important; }
