--- a/Vpass_tweak.user.css
+++ b/Vpass_tweak.user.css
@@ -1,8 +1,8 @@
 /* Vpass tweak */
 @namespace url(http://www.w3.org/1999/xhtml);
 @-moz-document url-prefix("https://www.smbc-card.com/vp/web_meisai/") {
-td.bdc td,
-form#MeisaiAnsForm td[bgcolor="#77B55E"] table td {
+.bdc td,
+#MeisaiAnsForm > table table td {
 white-space: nowrap !important;
 }
 }
