--- a/Amazon_Cloud_Player_tweak.user.css
+++ b/Amazon_Cloud_Player_tweak.user.css
@@ -3,10 +3,11 @@
 @-moz-document url-prefix("https://www.amazon.co.jp/gp/dmusic/cloudplayer/player") {
   .recFooter, .bucket .title,
   .currentSongActions, .optionCell > a, .actionButtons > a[href*="#remove"],
-  #accountOptions .setting
-  { display: none !important; }
+  #accountOptions .setting {
+    display: none !important;
+  }
 
-  .countText { display: none !important; }
+  .countText          { display: none !important; }
   .countNumber::after { content: " song(s)" }
 
   #nowPlayingSection .timer { font-size: 2.2rem !important; top: -2.8rem !important; }
