--- a/Excite_translation_tweak.user.css
+++ b/Excite_translation_tweak.user.css
@@ -3,8 +3,9 @@
 @-moz-document url-prefix("http://www.excite.co.jp/world/") {
   #contents > :not(#transForm):not(#webPageMin):not(#techDict):not(.content),
   #sidebar, #exUnderNav, #exFooter, #afterBox, #excite_slidead_wrap,
-  .ad728
-  { display: none !important; }
+  .ad728 {
+    display: none !important;
+  }
 
   #contents { margin: 0 !important; }
 }
